--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,462 @@
 
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    list-style: none;
+    /* color: white; */
+}
+body{
+    /* background: rgb(65, 80, 100); */
+    /* background:url("https://miro.medium.com/max/1400/1*-IBODDFJRLA3CmeVefEIQA.jpeg"); */
+    /* padding: 50px auto; */
+}
+
+
+a{
+    text-decoration: none;
+}
+
+.main{
+    /* overflow-x: inherit; */
+    /* padding: 20px; */
+    /* overflow-x: scroll; */
+    background:url("https://miro.medium.com/max/1400/1*-IBODDFJRLA3CmeVefEIQA.jpeg");
+
+}
+
+
+
+
+.navlink ul {
+    display: flex;
+}
+
+.navlink ul li {
+    margin: 0 10px;
+}
+
+.navlink {
+    /* display: flex; */
+    /* justify-content: center; */
+    align-items: center;
+    border-bottom: 2px solid #626262;
+    /* display: grid;
+    grid-template-columns: 10% 30% 60%; */
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+}
+@media (min-width: 680px) and (max-width: 900px){
+    .navlink{ 
+        flex-direction: column;
+    }
+}
+
+@media (max-width: 679px){
+    .navlink ul{ 
+        display: none;
+    }
+}
+    /* .main section {
+    display: grid;
+    grid-template-columns: 78% 22%;
+} */
+
+.left-section {
+    /* background: rgb(255, 255, 255); */
+    height: 100vh;
+    display: grid;
+    /* justify-content: space-between;            padding: 20px; */
+    grid-template-columns: 30% 65%;
+}
+
+.right-section {
+    /* background: rgb(114, 123, 136); */
+    height: 100vh;
+    /* padding: 20px; */
+    display: flex;
+    /* justify-content: center;  */
+    align-items: center;
+    flex-direction: column;
+}
+
+.main-planet-img {
+    /* width: 250px; */
+    width: 24vh;
+    border-radius: 50%;
+}
+
+.main-planet-img-sp{
+    width: 26vh;
+}
+
+.pl-details-box {
+    BOX-SHADOW: 0 0 11px 1px;
+    color: black;
+    border: 1px solid;
+    border-radius: 10px;
+    padding: 18px;
+    background: #ededed;
+    width: 63vw;
+    margin-top: 36px;
+    position: relative;
+}
+
+.pl-details {
+    background-repeat: no-repeat;
+    padding-bottom: 2rem;
+    /* padding-top: 4rem; */
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    background-attachment: fixed;
+    background-size: cover;
+}
+
+
+
+@media screen and (max-width:735px){
+    .pl-details{
+        flex-direction: column;
+        padding-top: 1rem;
+    }
+    .pl-details-box {
+        width: 90vw;
+    }
+}
+.pl-1 {
+    background: url(https://www.sciencenews.org/wp-content/uploads/2022/03/031522_no_mercury-diamonds_feat.jpg);
+    background-attachment: fixed;
+    background-size: cover;
+
+}
+
+.pl-2 {
+    background: url(images/venus-bg.png);
+    background-attachment: fixed;
+    background-size: cover;
+
+}
+
+.pl-3 {
+    background: url(images/earth-bg.png);
+    background-attachment: fixed;
+    background-size: cover;
+
+}
+
+
+
+
+.pl-4 {
+    background: url(images/mars-bg.png);
+    background-attachment: fixed;
+    background-size: cover;
+}
+
+.pl-5 {
+    background: url(https://solarsystem.nasa.gov/system/resources/detail_files/626_PIA21775.jpg);
+    background-attachment: fixed;
+    background-size: cover;
+
+}
+
+
+.pl-6 {
+    background: url(images/saturn-bg.png);
+    background-attachment: fixed;
+    background-size: cover;
+
+}
+
+
+.pl-7 {
+    background: url(images/uranus-bg.png);
+    background-attachment: fixed;
+    background-size: cover;
+
+}
+
+.pl-8 {
+    background: url(images/neptune-bg.png);
+    background-attachment: fixed;
+    background-size: cover;
+
+}
+
+
+
+
+.moving-planet-img {
+
+    border-radius: 50%;
+    margin: 0 2vh;
+}
+
+
+
+.moving-planet-img-sp {
+    width: 80px;
+    /* border-radius: 50%; */
+    margin: 0 10px;
+}
+
+
+
+
+
+@keyframes loader {
+    from {
+        transform: rotate(0deg);
+        filter: hue-rotate(0);
+    }
+
+    to {
+        transform: translateY(75vh);
+        filter: hue-rotate(360);
+    }
+}
+
+
+.pl-move-1 {
+    display: inline-block;
+    animation: loader 7s linear infinite;
+}
+
+
+
+.pl-move-2 {
+    display: inline-block;
+    animation: loader 9s linear infinite;
+}
+
+.pl-move-3 {
+    display: inline-block;
+    animation: loader 10s linear infinite;
+}
+
+.pl-move-4 {
+    display: inline-block;
+    animation: loader 14s linear infinite;
+}
+
+.pl-move-5 {
+    display: inline-block;
+    animation: loader 30s linear infinite;
+}
+
+.pl-move-6 {
+    display: inline-block;
+    animation: loader 40s linear infinite;
+}
+
+.pl-move-7 {
+    display: inline-block;
+    animation: loader 50s linear infinite;
+}
+
+.pl-move-8 {
+    display: inline-block;
+    animation: loader 80s linear infinite;
+}
+
+@keyframes revolve {
+    from {
+        transform: rotate(0deg);
+
+    }
+
+    to {
+        /* transform: rotate(360vh); */
+        transform: rotate(360deg);
+
+    }
+}
+
+.planet_1 {
+    width:2vw;
+    position: relative;
+    /* animation: loader 7s linear infinite; */
+    animation: revolve 20s linear infinite;
+
+}
+
+.planet_1:hover{
+    border-radius: 0%;
+    animation-play-state: paused;
+}
+
+.planet_2 {
+    width: 4vw;
+    position: relative;
+    /* animation: loader 9s linear infinite; */
+    animation: revolve 30s linear infinite;
+
+}
+
+.planet_3 {
+    width: 4vw;
+    position: relative;
+    /* animation: loader 10s linear infinite; */
+    animation: revolve 7s linear infinite;
+
+}
+
+.planet_4 {
+    width:3vw;
+    position: relative;
+    /* animation: loader 14s linear infinite; */
+    animation: revolve 8s linear infinite;
+
+}
+
+.planet_5 {
+    width: 9vw;
+    position: relative;
+    /* animation: loader 30s linear infinite; */
+    animation: revolve 3s linear infinite;
+
+}
+
+.planet_6 {
+    width: 9vw;
+    position: relative;
+    /* animation: loader 40s linear infinite; */
+    /*  */
+}
+
+.planet_7 {
+    width: 6vw;
+    position: relative;
+    /* animation: loader 50s linear infinite; */
+    animation: revolve 5s linear infinite;
+
+}
+
+.planet_8 {
+    width: 6vw;
+    position: relative;
+    /* animation: loader 50s linear infinite; */
+    animation: revolve 6s linear infinite;
+
+}
+
+
+.sun-img {
+    position: absolute;
+    width: 26vw;
+    border-radius: 50%;
+    right: 73vw;
+    top: 200px;
+    animation: revolve 50s linear infinite;
+    box-shadow: 0 0 20rem 5rem yellow;
+
+}
+
+
+.pl-content h5{
+    font-size: 2vh;
+}
+
+
+.sun-img-nav {
+    box-shadow: 0 0 3rem 1.5rem yellow;
+}
+
+.planetss {
+    /* position: relative;
+    display: inline-block;
+    left: 140px; */
+    display: flex;
+    justify-content: end;
+    /* align-items: center; */
+}
+
+.logo {
+    width: 125px;
+    height: 77px;
+    border-radius: 50%;
+    display: flex;
+}
+
+.comb-logo{
+    display: flex;     align-items: center;
+}
+
+.navlink h3 {
+    color: white;
+}
+
+.break-1 {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    background: blueviolet;
+    padding: 20px;
+}
+.sub-break-1{
+    display: flex;
+    justify-content: space-around;
+}
+.sub-break-1 div{
+    margin: 0px 3rem;
+}
+
+@media screen and (max-width:500px){
+    .sub-break-1{
+        display: block;
+    }
+  
+}
+
+
+
+
+@media screen and (max-width:700px){
+    .break-1{
+        flex-direction: column;
+    }
+  
+}
+.break-1 h1 {
+    color: white;
+    /* font-size: 4vh */
+}
+.break-1 h4 {
+    color: white;
+    /* font-size: 4vw */
+}
+
+
+.planet-heading {
+    text-align: center;
+    background: #3b3b3b;
+    padding: 9px;
+    color: #23f7ce;
+}
+
+.nav-img {
+    border-radius: 50%;
+    width: 50px;
+    transition: 1s;
+}
+
+
+.nav-img:hover,
+.nav-img-sp:hover {
+    transform: scale(1.5);
+}
+
+
+.nav-img-sp {
+    width: 70px;
+    transition: 1s;
+}
+
+footer {
+    background: linear-gradient(180deg, #468eb1, #040404e6);
+    padding: 8px;
+    text-align: end;
+    color: white;
+}
