--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,3 @@
-
 *{
     margin: 0;
     padding: 0;
@@ -10,6 +9,7 @@ body{
     /* background: rgb(65, 80, 100); */
     /* background:url("https://miro.medium.com/max/1400/1*-IBODDFJRLA3CmeVefEIQA.jpeg"); */
     /* padding: 50px auto; */
+    overflow-x: hidden;
 }
 
 
@@ -21,25 +21,39 @@ a{
     /* overflow-x: inherit; */
     /* padding: 20px; */
     /* overflow-x: scroll; */
-    background:url("https://miro.medium.com/max/1400/1*-IBODDFJRLA3CmeVefEIQA.jpeg");
-
 }
 
+.main-bg{
+    
+    background: url(https://miro.medium.com/max/1400/1*-IBODDFJRLA3CmeVefEIQA.jpeg);
+    animation: move_bg linear 771s infinite;
+    height: 100vh;
+    position: absolute;
+    width: 400vw;
+}
+@keyframes move_bg{
+    100%{
+        transform: translateX(-500vw);
+    }
+}
 
 
 
 .navlink ul {
     display: flex;
+    align-items: end;
 }
+
 
 .navlink ul li {
     margin: 0 10px;
 }
 
 .navlink {
+    background: black;
     /* display: flex; */
     /* justify-content: center; */
-    align-items: center;
+    align-items: end;
     border-bottom: 2px solid #626262;
     /* display: grid;
     grid-template-columns: 10% 30% 60%; */
